# kakapo-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  proxy.py  pyproject.toml  requirements-docker.txt  requirements.txt  seed_cache.py
.github/workflows/: deploy-aws-ecr.yml
app/: __init__.py  main.py
app/core/: config.py  database.py  redis_client.py  tokenizer.py
app/db/: database.py
app/ingestion/: chunker.py  pipeline.py
app/layers/: complexity_classifier.py  llm_router.py  pre_cache_detector.py  semantic_cache.py
app/middleware/: auth.py
app/models/: db.py  schemas.py
app/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
app/reliability/: circuit_breaker.py  response_validator.py
app/routers/: __init__.py  admin.py  chat.py  feedback.py  pages.py  query.py  reporting.py
app/services/: auth_service.py  cache_service.py  llm_service.py  stats_service.py
deployment/examples/: spa-s3-cloudfront.workflow.yml
infrastructure/terraform/: alb.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
src/backend/: __init__.py  requirements.txt  seed_cache.py
src/backend/app/: main.py
src/backend/app/core/: config.py
src/backend/app/db/: database.py
src/backend/app/routers/: auth.py  semantic_cache.py  stats.py
src/backend/app/schemas/: auth.py
src/backend/app/services/: auth_service.py
tests/: test_repo_structure.py
