[project]
name = "kakapo-backend"
version = "0.1.0"
description = "LLM proxy backend with exact and semantic caching."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src/backend",
]
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
